--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,11 @@ android {
     }
 
     buildTypes {
+        debug{
+            applicationIdSuffix ".check"
+        }
         release {
+            applicationIdSuffix ".check"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
