--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        vaca {
+            storeFile file('..\\key\\vthkey.jks')
+            storePassword 'aaaa2222'
+            keyAlias 'key0'
+            keyPassword 'aaaa2222'
+        }
+    }
     namespace 'com.example.pl2302_android'
     compileSdk 33
 
@@ -19,9 +27,11 @@ android {
 
     buildTypes {
         debug{
+            signingConfig signingConfigs.vaca
             applicationIdSuffix ".check"
         }
         release {
+            signingConfig signingConfigs.vaca
             applicationIdSuffix ".check"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
